[package]
authors = ["Zeyla Hellyer <zeylahellyer@gmail.com>"]
description = "ISO 4217 data."
license = "ISC"
keywords = ["iso4217", "ISO", "4217"]
name = "iso4217"
readme = "README.md"
repository = "https://github.com/zeyla/iso4217.rs"
version = "0.3.0"

[features]
default = ["const-fn"]
const-fn = []